--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,9 @@ project(NetworkProgramming)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 
-set(Client src/client.cpp)
-set(Server src/server.cpp)
+set(Client src/SendFiles/client.cpp)
+set(Server src/SendFiles/server.cpp)
 add_executable(Client ${Client})
 add_executable(Server ${Server})
 
-configure_file(src/index.html index.html)
+configure_file(src/SendFiles/index.html index.html)
