add multichat code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,14 @@ project(NetworkProgramming)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 
-set(Client src/SendFiles/client.cpp)
-set(Server src/SendFiles/server.cpp)
-add_executable(Client ${Client})
-add_executable(Server ${Server})
+set(SendFileClient src/SendFiles/client.cpp )
+set(SendFileServer src/SendFiles/server.cpp )
+add_executable(SendFileClient ${SendFileClient})
+add_executable(SendFileServer ${SendFileServer})
 
-configure_file(src/SendFiles/index.html index.html)
+set(MultiChatClient src/MultiChat/client.cpp)
+set(MultiChatServer src/MultiChat/server.cpp)
+add_executable(MultiChatClient ${MultiChatClient})
+add_executable(MultiChatServer ${MultiChatServer})
+
+configure_file(res/index.html index.html)
